# meshcloud

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  ci.yml  create_zip.py  dev_setup.sh  docker-compose.yml  generate_certs.sh  locustfile.py  mkdocs.yml  pyproject.toml  pytest.ini  repro_output.txt  requirements-dev.txt  requirements.txt  start.sh  start_lan.sh  start_mesh.sh  start_node.py
cli/: meshcloud_cli.py
config/: peers_8000.json  peers_8001.json  peers_8002.json  peers_8003.json  peers_8004.json  peers_8006.json  peers_8007.json  peers_8010.json
dashboard/: index.html
docker/: nginx.conf
docs/: index.md
frontend/: package-lock.json  package.json
k8s/: deployment.yaml  headless-service.yaml  ingress.yaml  pvc.yaml  secrets.yaml  service.yaml  statefulset.yaml
meshcloud/: main.py
reproduction_scripts/: verify_identity.py
site/: 404.html  index.html  sitemap.xml
storage_node8000/: meshcloud_node-8000.db-shm  meshcloud_node-8000.db-wal  meshcloud_node-A.db-shm  meshcloud_node-A.db-wal
storage_node8001/: meshcloud_node-8001.db-shm  meshcloud_node-8001.db-wal  meshcloud_node-B.db-shm  meshcloud_node-B.db-wal
storage_node8002/: meshcloud_node-8002.db-shm  meshcloud_node-8002.db-wal  meshcloud_node-C.db-shm  meshcloud_node-C.db-wal
storage_node8003/: meshcloud_node-8003.db-shm  meshcloud_node-8003.db-wal
storage_node8004/: meshcloud_node-8004.db-shm  meshcloud_node-8004.db-wal
storage_node8005/: meshcloud_node-8005.db-shm  meshcloud_node-8005.db-wal
(+100 files in other folders)
